Add python editor save-as button and fix load/save logic (#55)
* Add python editor save-as button and fix load/save logic

This adds a save-as button next to the save button in the python editor. Also, it fixes several bugs where cancellation of an open or save dialog or a failed io operation would reset the file path or block the save functionality.

* Added fill property to save-as icon to allow color change

--- a/resources/stylesheet/hal.qss
+++ b/resources/stylesheet/hal.qss
@@ -1143,6 +1143,9 @@ qproperty-open_icon_path: ":/icons/folder";
 qproperty-save_icon_style: "all->#D3C68A";
 qproperty-save_icon_path: ":/icons/folder-down";
 
+qproperty-save_as_icon_style: "all->#D3C68A";
+qproperty-save_as_icon_path: ":/icons/save-as";
+
 qproperty-run_icon_style: "all->#00ff00";
 qproperty-run_icon_path: ":/icons/run";
 }
