--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -66,6 +66,7 @@
         <file alias="drive">icons/0100-drive.svg</file>
         <file alias="folder-down">icons/0052-folder-download.svg</file>
         <file alias="save">icons/save.svg</file>
+        <file alias="save-as">icons/save-as.svg</file>
         <file alias="run">icons/run.svg</file>
         <file alias="bell">icons/0082-bell.svg</file>
         <file alias="drop">icons/0097-download.svg</file>
