--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -78,6 +78,7 @@
         <file alias="tree-arrow-down">icons/arrow-down.svg</file>
         <file alias="tree-arrow-right">icons/arrow-right.svg</file>
         <file alias="placeholder">icons/0154-bug.svg</file>
+        <file alias="new-file">icons/new-file.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
