--- a/resources/stylesheet/darcula.qss
+++ b/resources/stylesheet/darcula.qss
@@ -1278,6 +1278,10 @@ qproperty-save_as_icon_path: ":/icons/save-as";
 
 qproperty-run_icon_style: "all->#2BAD4A";
 qproperty-run_icon_path: ":/icons/run";
+
+/*no style at all, the empty string is needed*/
+qproperty-new_file_icon_style: "";
+qproperty-new_file_icon_path: ":/icons/new-file";
 }
 
 main_window {
