Bugfix/python editor searchbar behavior (#116)
* added some minor searchbar fixes

* fixed bug where extra-selections were still active even though they were not supposed to be

* some cleanup

* cleanup, integrated new file action and toggle minimap action correctly into the python editor

* fixed issue #63, gui loggs now an error message

--- a/resources/stylesheet/sunny.qss
+++ b/resources/stylesheet/sunny.qss
@@ -1314,6 +1314,9 @@ qproperty-save_as_icon_path: ":/icons/save-as";
 qproperty-run_icon_style: "all->#2BAD4A";
 qproperty-run_icon_path: ":/icons/run";
 
+qproperty-toggle_minimap_icon_style: "all->#FFDD00";
+qproperty-toggle_minimap_icon_path: ":/icons/placeholder";
+
 /*no style at all, the empty string is needed*/
 qproperty-new_file_icon_style: "";
 qproperty-new_file_icon_path: ":/icons/new-file";
