--- a/resources/stylesheet/darcula.qss
+++ b/resources/stylesheet/darcula.qss
@@ -1311,7 +1311,7 @@ qproperty-new_view_icon_style: "all->#00AA00";
 qproperty-new_view_icon_path: ":/icons/plus";
 
 qproperty-rename_icon_style: "all->#3192C5";
-qproperty-rename_icon_path: ":/icons/rename";
+qproperty-rename_icon_path: ":/icons/pen";
 
 qproperty-delete_icon_style: "all->#DDDDDD";
 qproperty-delete_icon_path: ":/icons/trashcan";
