Implement settings system
Add settings_manager handling loading and writing of user and default settings
Implement settings_relay to notify about setting changes
Remove hard-coded settings demo
Add pre-defined settings widget types
Move GUI style settings to new widget instantiation mechanism
Add explicit OK/Cancel buttons to the settings page

Application-wide defaults are currently in a file next to the user
settings and need to be moved to a read-only system-wide directory
in the future.

--- a/resources/stylesheet/hal.qss
+++ b/resources/stylesheet/hal.qss
@@ -367,6 +367,10 @@ settings_widget {
     /*border-left : 5px solid #232ed1;*/
 }
 
+settings_widget[dirty=true] {
+    border-left      : 5px solid rgb(34, 37, 38);
+}
+
 settings_widget QLabel {
     color            : #D3DCE6;
     background-color : #25292D;
