--- a/resources/stylesheet/darcula.qss
+++ b/resources/stylesheet/darcula.qss
@@ -401,6 +401,10 @@ settings_widget {
     /*border-left : 5px solid #232ed1;*/
 }
 
+settings_widget[dirty=true] {
+    border-left      : 5px solid rgb(73, 200, 76);
+}
+
 settings_widget QLabel {
     color            : #D3DCE6;
     background-color : #25292D;
