--- a/resources/stylesheet/sunny.qss
+++ b/resources/stylesheet/sunny.qss
@@ -409,6 +409,10 @@ settings_widget {
     /*border-left : 5px solid #232ed1;*/
 }
 
+settings_widget[dirty=true] {
+    border-left      : 5px solid rgb(85, 255, 0);
+}
+
 settings_widget QLabel {
     /* color            : #D3DCE6;
     background-color : #25292D; */
