--- a/resources/stylesheet/hal.qss
+++ b/resources/stylesheet/hal.qss
@@ -424,6 +424,16 @@ main_settings_widget settings_display * {
     border           : 1px solid green;
 }
 
+main_settings_widget preview_widget {
+    background-color: rgb(9, 11, 13);
+    border          : 5px solid rgb(13, 15, 17);
+    border-radius   : 15px;
+}
+
+main_settings_widget preview_widget *{
+    background-color: rgba(255, 255, 255, 0);
+}
+
 /* EXPANDING_LIST_WIDGET */
 
 main_settings_widget expanding_list_widget {
