--- a/resources/stylesheet/sunny.qss
+++ b/resources/stylesheet/sunny.qss
@@ -1372,6 +1372,9 @@ qproperty-delete_icon_path: ":/icons/trashcan";
 }
 
 main_window {
+qproperty-new_file_icon_style: "";
+qproperty-new_file_icon_path: ":/icons/new-file";
+
 qproperty-open_icon_style: "all->#ff6a47";
 qproperty-open_icon_path: ":/icons/folder";
 
