Add mutually exclusive groups to settings page
Use this to prevent the same keybind being assigned to multiple actions.

--- a/resources/stylesheet/darcula.qss
+++ b/resources/stylesheet/darcula.qss
@@ -401,13 +401,18 @@ settings_widget {
     /*border-left : 5px solid #232ed1;*/
 }
 
-settings_widget[dirty=true] {
+settings_widget[conflicts=true] {
+    border-left      : 5px solid #A61F1F;
+    background-color : rgb(70, 35, 35);
+}
+
+settings_widget[dirty=true][conflicts=false] {
     border-left      : 5px solid rgb(73, 200, 76);
 }
 
 settings_widget QLabel {
     color            : #D3DCE6;
-    background-color : #25292D;
+    background-color : rgba(255, 255, 255, 0);
     margin-right     : 10px;
 }
 
