Add keybind settings for Python editor toolbar actions

--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -90,6 +90,7 @@
         <file alias="plus">icons/plus.svg</file>
         <file alias="trashcan">icons/trashcan.svg</file>
         <file alias="graph">icons/0189-tree.svg</file>
+        <file alias="keyboard">icons/0086-keyboard.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
