Add button to toggle view timestamps

--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -92,6 +92,7 @@
         <file alias="trashcan">icons/trashcan.svg</file>
         <file alias="graph">icons/0189-tree.svg</file>
         <file alias="keyboard">icons/0086-keyboard.svg</file>
+        <file alias="clock">icons/0079-clock.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
