First demo of new multi-target navigation widget

--- a/resources/stylesheet/darcula.qss
+++ b/resources/stylesheet/darcula.qss
@@ -1507,6 +1507,10 @@ QTreeView::item:selected {
     border: none;
 }
 
+QTreeWidget::item:disabled {
+    color: #777777;
+}
+
 QMenu::item:disabled{
     /*background: #ffffff;*/
     color: #777777;
