--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -93,6 +93,7 @@
         <file alias="graph">icons/0189-tree.svg</file>
         <file alias="keyboard">icons/0086-keyboard.svg</file>
         <file alias="clock">icons/0079-clock.svg</file>
+        <file alias="gen-window">icons/generic-window.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
